# mycli-lite

./: .gitignore  AGENTS.md  ATTRIBUTION.md  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  mycli_lite.py  mycli_lite_legacy.py  pyproject.toml  requirements-dev.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  prune-release-assets.yml  release.yml
docs/: usage.md
legacy_tests/: __init__.py  test_live_mysql_legacy.py  test_mycli_lite_legacy.py
tests/: test_legacy_parity.py  test_live_mysql.py  test_mycli_lite.py
