[build-system]
requires = ['setuptools==83.0.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'mycli-lite'
dynamic = ['version']
description = 'A dependency-free, single-file MySQL client and CLI.'
readme = 'README.md'
requires-python = '>=3.10'
license = 'BSD-3-Clause'
license-files = ['LICENSE.txt', 'ATTRIBUTION.md']
authors = [{ name = 'mycli-lite contributors' }]
keywords = ['cli', 'mysql', 'pentesting', 'security', 'zero-dependency']
classifiers = [
    'Private :: Do Not Upload',
    'Development Status :: 3 - Alpha',
    'Environment :: Console',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
    'Topic :: Database :: Front-Ends',
    'Topic :: Security',
]
dependencies = []

[project.urls]
Repository = 'https://github.com/xlaesch/mycli-lite'
Issues = 'https://github.com/xlaesch/mycli-lite/issues'

[project.scripts]
mycli-lite = 'mycli_lite:_main_entrypoint'

[tool.setuptools]
py-modules = ['mycli_lite']
packages = []
include-package-data = false

[tool.setuptools.dynamic]
version = { attr = 'mycli_lite.__version__' }

[tool.pytest.ini_options]
addopts = ['-ra', '--strict-config', '--strict-markers']
testpaths = ['tests']
markers = [
    'live: tests that require a MySQL-compatible server',
]

[tool.ruff]
target-version = 'py310'
line-length = 140
exclude = ['build', 'dist', 'legacy_tests', 'mycli_lite_legacy.py']

[tool.ruff.lint]
select = ['A', 'B', 'C4', 'E', 'F', 'I', 'PIE', 'TID', 'W']
ignore = [
    'B005',
    'E401',
    'E402',
    'PIE808',
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ['mycli_lite', 'tests']

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = 'all'

[tool.ruff.format]
preview = true
quote-style = 'preserve'

[tool.mypy]
python_version = '3.10'
files = ['mycli_lite.py', 'tests']
check_untyped_defs = true
disallow_untyped_defs = true
strict_equality = true
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
show_column_numbers = true

[[tool.mypy.overrides]]
module = 'mycli_lite_legacy'
ignore_errors = true
